# pipes-protolude

./: README.md  pipes-protolude.cabal  shell.nix  stack.yaml
app/: Main.hs
src/Pipes/: Base.hs  Debug.hs  Ecosystem.hs  Monad.hs  Protolude.hs  Show.hs  Temporary.hs  Transformers.hs
src/Pipes/Data/: Conversion.hs
