name:                pipes-protolude
version:             0.1.0.0
synopsis:            Alternate Prelude for the pipes ecosystem
description:         Please see README.md
homepage:            https://github.com/mckeankylej/pipes-protolude#readme
license:             BSD3
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           2016 Kyle McKean
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Pipes.Protolude
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable pipes-protolude-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pipes-protolude
  default-language:    Haskell2010

test-suite pipes-protolude-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pipes-protolude
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mckeankylej/pipes-protolude
