name:                pipes-protolude
version:             0.1.0.0
synopsis:            Alternate Prelude for the pipes ecosystem
description:         Please see README.md
homepage:            https://github.com/mckeankylej/pipes-protolude#readme
license:             BSD3
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           2016 Kyle McKean
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Pipes.Protolude
                     , Pipes.Base
                     , Pipes.Debug
                     , Pipes.Data.Conversion
                     , Pipes.Monad
                     , Pipes.Transformers
                     , Pipes.Ecosystem
  build-depends:       base >= 4.7 && < 5
                     , deepseq >= 1.4
                     , mtl >= 2.2
                     , transformers >= 0.4
                     , lifted-async >= 0.9
                     , pipes >= 4.1.9
                     , pipes-concurrency >= 2.0.6
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

executable pipes-protolude-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pipes-protolude
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

test-suite pipes-protolude-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pipes-protolude
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/mckeankylej/pipes-protolude
